# PROJET-PROG-S1-2022

./: CMakeLists.txt  Identifiant
Banque/: Banque.cpp  Banque.h  CMakeLists.txt  mainBanque.cpp
Client/: CMakeLists.txt  Client.cpp  Client.h  Test_client.cpp
Compte/: .Compte.h.swp  CMakeLists.txt  Compte.cpp  Compte.h  mainCompte.cpp
Json/: CMakeLists.txt  load_save_Json.cpp  load_save_Json.h  mainJson.cpp  saveJson.cpp  saveJson.h
PROJET PROG S1 2022/: Banque.h  Banque_decentralisee.cpp  CMakeLists.txt  Client.h  Interface_client.cpp  PROJET PROG S1 2022.cpp  PROJET PROG S1 2022.h  includer.h
PROJET PROG S1 2022/Banque/: Banque.cpp  Banque.h
PROJET PROG S1 2022/Client/: Client.cpp  Client.h
PROJET PROG S1 2022/Compte/: Compte.cpp  Compte.h
PROJET PROG S1 2022/Fonctions/: Def_id.cpp  Def_id.h  EpargneThread.cpp  Threadfonctions.h  Transaction.cpp  Transaction.h  saveJsonthread.cpp  updateThread.cpp
Sockets/: CMakeLists.txt  banque_centrale.cpp  banque_decentralisee.cpp  client.cpp  fonctions_socket.cpp  serveur.cpp  socket_tools.cpp  tools.cpp
Xwidget/: CMakeLists.txt  LoginManagement.cpp  LoginManagement.h  testxw.cpp  testxw.h
myapp/: CMakeLists.txt  My_new_Customer_dialog.hpp  example_of_use.cpp  example_of_use.hpp  myapp.cpp  myapp.h
