# CMakeList.txt : projet CMake pour PROJET PROG S1 2022, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)
# Ajoutez une source à l'exécutable de ce projet.

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
add_library(UtilityFunctionLib "Fonctions/Transaction.cpp")